[package]
name = "lsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
log = "0.4.17"
bitvec = "1"
fastmurmur3 = "0.1.2"
timer = "0.2.0"
chrono = "0.4"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]